[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "parser",
    "interpreter",
    "scanner",
]

[workspace.dependencies]
as-any = "0.3.0"

[dependencies]
parser = { path = "./parser" }
scanner = {path = "./scanner"}
interpreter = {path = "./interpreter"}